5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1880_3177.log
== SUBMITION (2019-07-03 14:36:25) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
for i in range(len(vogal))
print(vogal[i],qtd[i])
		
-- EXECUTION TIME:
0.686018
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 16
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:36:38) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
0.537911
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:36:49) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
2.10199
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:36:50) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
2.64992
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:36:50) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
4.05127
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:36:50) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
4.30282
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:36:50) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
4.2959
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:36:50) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	elif i == 'e':
		qtd[1]+=1
	elif i == 'i':
		qtd[2]+=1
	elif i == 'o':
		qtd[3]+=1
	elif i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
5.42516
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:37:01) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
print(vogal[i],qtd[i])
-- EXECUTION TIME:
0.683172
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:37:26) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
	print(vogal[i],qtd[i])
-- EXECUTION TIME:
0.705956
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:28) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1
		
for i in range(len(vogal))
	print(vogal[i],qtd[i])
-- ERROR:
File "XXXX", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:37:41) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal))
	print(vogal[i],qtd[i])
-- EXECUTION TIME:
0.539183
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:42) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal))
	print(vogal[i],qtd[i])
-- ERROR:
File "XXXX", line 17
    for i in range(len(vogal))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:38:07) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],qtd[i])
-- EXECUTION TIME:
0.861138
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a 1
e 1
i 1
o 1
 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a 2
e 1
i 1
o 0
 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a 1
e 0
i 0
o 3
 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:38:09) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', '']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],qtd[i])
-- OUTPUT:
a 1
e 1
i 1
o 1
 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:38:47) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', 'u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],qtd[i])
-- EXECUTION TIME:
0.722588
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a 1
e 1
i 1
o 1
u 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a 2
e 1
i 1
o 0
u 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a 1
e 0
i 0
o 3
u 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:38:49) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', 'u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],qtd[i])
-- OUTPUT:
a 1
e 1
i 1
o 1
u 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:39:08) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', 'u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],qtd[i])
-- EXECUTION TIME:
0.540391
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a 1
e 1
i 1
o 1
u 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a 2
e 1
i 1
o 0
u 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a 1
e 0
i 0
o 3
u 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:41:02) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', 'u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i] : qtd[i])
-- EXECUTION TIME:
0.715055
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 18
    print(vogal[i] : qtd[i])
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:41:03) 
-- CODE:
string = input("String: ")
vogal = ['a','e', 'i', 'o', 'u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i] : qtd[i])
-- ERROR:
File "XXXX", line 18
    print(vogal[i] : qtd[i])
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:41:48) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i], qtd[i])
-- OUTPUT:
a 1
e 1
i 1
o 1
u 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:42:04) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i], qtd[i])
-- EXECUTION TIME:
0.788558
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a 1
e 1
i 1
o 1
u 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a 2
e 1
i 1
o 0
u 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a 1
e 0
i 0
o 3
u 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:42:44) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i], qtd[i])
-- OUTPUT:
a 1
e 1
i 1
o 1
u 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:43:49) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.557482
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:43:51) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- OUTPUT:
a : 1
e : 1
i : 1
o : 1
u : 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:44:26) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- OUTPUT:
a : 1
e : 1
i : 1
o : 1
u : 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:44:29) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.707209
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:44:55) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.76614
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:44:57) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.667039
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:45:56) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- OUTPUT:
a : 1
e : 1
i : 1
o : 1
u : 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:13) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i]":", qtd[i])
-- ERROR:
File "XXXX", line 18
    print(vogal[i]":", qtd[i])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:21) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- OUTPUT:
a : 1
e : 1
i : 1
o : 1
u : 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:46:21) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.77612
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
s: a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:46:25) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.895394
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:56:34) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i], qtd[i])
-- OUTPUT:
a 1
e 1
i 1
o 1
u 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:57:13) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.563429
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:02:50) 
-- CODE:
string = input("s: ")
vogal = ['a':'e':'i':'o':'u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.668335
-- ERROR:
  File "/home/codebench/codes/1880/3177/main.py", line 2
    vogal = ['a':'e':'i':'o':'u']
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:02:51) 
-- CODE:
string = input("s: ")
vogal = ['a':'e':'i':'o':'u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- ERROR:
File "XXXX", line 2
    vogal = ['a':'e':'i':'o':'u']
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:05) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
0.635917
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:33) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
1.15586
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:34) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
2.46487
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:35) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
3.59075
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:36) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
4.67034
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:36) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
5.63053
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:38) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
6.6263
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:45) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
4.11069
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:47) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
4.15223
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:47) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
3.89889
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:48) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
3.85471
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:49) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
3.9334
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:50) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
3.83563
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:57) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
3.83563
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:58) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
4.08816
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:58) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
4.12905
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:59) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
3.83982
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 1
e : 1
i : 1
o : 1
u : 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
s: a : 1
e : 0
i : 0
o : 3
u : 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:59) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
4.02056
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:03:59) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i],":", qtd[i])
-- EXECUTION TIME:
4.15376
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a : 2
e : 1
i : 1
o : 0
u : 0
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a : 1
e : 0
i : 0
o : 3
u : 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:05:39) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i], qtd[i])
-- EXECUTION TIME:
0.753259
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a 1
e 1
i 1
o 1
u 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a 2
e 1
i 1
o 0
u 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a 1
e 0
i 0
o 3
u 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:05:40) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i], qtd[i])
-- OUTPUT:
a 1
e 1
i 1
o 1
u 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:06:31) 
-- CODE:
string = input("s: ")
vogal = ['a','e','i','o','u']
qtd = [0,0,0,0,0]

for i in string:
	if i == 'a':
		qtd[0]+=1
	if i == 'e':
		qtd[1]+=1
	if i == 'i':
		qtd[2]+=1
	if i == 'o':
		qtd[3]+=1
	if i == 'u':
		qtd[4]+=1

for i in range(len(vogal)):
	print(vogal[i]+":", qtd[i])
-- EXECUTION TIME:
0.757105
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a: 1
e: 1
i: 1
o: 1
u: 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a: 2
e: 1
i: 1
o: 0
u: 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a: 1
e: 0
i: 0
o: 3
u: 0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
